[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = ""
authors = ["Aada Nwajei <aada.nwajei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
